# nebula

./: .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  DEMO.md  LICENSE  README.md  biome.json  foundry.toml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.changeset/: config.json
.github/workflows/: ci.yml  deploy-web.yml  release.yml
apps/web/: .env.local.example  .gitignore  .npmrc  README.md  next.config.ts  package.json
apps/web-app/: package.json
apps/web-landing/: LICENSE  README.md  index.html  index.js  package.json
apps/web-landing/css/: index.css  tailwind-build.css
apps/web/app/: layout.tsx  page.tsx  providers.tsx  robots.ts
apps/web/app/about/: page.tsx
apps/web/app/cli-connect/: page.tsx
apps/web/app/cli-sign/: page.tsx
apps/web/app/console/: layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/playground/: page.tsx
apps/web/app/policies/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/research/: page.tsx
apps/web/app/safety/: page.tsx
apps/web/app/solutions/: page.tsx
apps/web/app/status/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/: AgentWalletContext.tsx  CasperAuthContext.tsx  ChunkReload.tsx  Footer.tsx  Navbar.tsx  PolicyPlayground.tsx  SubNavbar.tsx
apps/web/components/console/: ActivityFeed.tsx  AgentDetailHeader.tsx  AgentEoaInput.tsx  AgentList.tsx  AgentWalletBar.tsx  Chat.tsx  ChatConsole.tsx  ConnectGate.tsx  ConsoleNavbar.tsx  IdentityPanel.tsx  MemoryBrowser.tsx  UnlockKeystore.tsx  WalletPanel.tsx
apps/web/components/docs/: DocsNavbar.tsx
apps/web/components/legal/: LegalShell.tsx
apps/web/components/pricing/: PricingTabs.tsx
apps/web/components/sections/: Hero.tsx  HeroCanvas.tsx  Section2.tsx  Section3.tsx  (+1 more)
apps/web/lib/: agent-eoa-cache.ts  agent-wallet.ts  agent.ts  chainscan.ts  chat-history-store.ts  chat-store.ts  csprclick.ts  cycles.ts  format.ts  policy-demo.ts  provenance.ts  self-funding.ts  snapshot.ts  telegram-api.ts  telegram-store.ts  tools-catalog.ts  use-casper-auth.ts  use-siwe.ts  use-wallet.ts  vault.ts  wagmi.ts  wallet-context.ts
apps/web/public/: install.sh  site.webmanifest
contracts/: Cargo.toml  DEPLOY.md  Odra.toml  README.md
contracts-session/: Cargo.toml  deposit_session.wasm  payable_call_session.wasm
contracts-session/.cargo/: config.toml
contracts-session/src/: main.rs  payable_call.rs
contracts/.cargo/: config.toml
contracts/script/: Deploy.s.sol  DeployIdentityRegistry.s.sol  DeployInbox.s.sol  DeployMarket.s.sol  DeployRegistrar.s.sol  DeployReputationValidation.s.sol
contracts/src/: AnimaAgentNFT.sol  AnimaInbox.sol  AnimaMarket.sol  AnimaSubnameRegistrar.sol  NebulaIdentityRegistry.sol  NebulaReputationRegistry.sol  NebulaValidationRegistry.sol  ScopedAgentModule.sol  amm.rs  cep3009.rs  exchange.rs  identity.rs  lib.rs  reputation.rs  token.rs  treasury.rs  validation.rs
contracts/test/: AnimaAgentNFT.t.sol  AnimaInbox.t.sol  AnimaMarket.t.sol  AnimaSubnameRegistrar.t.sol  NebulaIdentityRegistry.t.sol  ReputationValidation.t.sol
scripts/: deploy-web.sh  publish-npm.sh
scripts/casper/: agent.ts  auth-proxy.ts  deploy.ts  pay-redeem.ts  pay-seed.ts  smoke.ts  test-all.ts  test-identity.ts  transfer.ts  treasury-deposit.ts
skills/: README.md
skills/nebula-byreal-rebalance/: SKILL.md
skills/nebula-byreal-swap/: SKILL.md
skills/nebula-casper-pools/: SKILL.md
skills/nebula-casper-stake/: SKILL.md
skills/nebula-casper-swap/: SKILL.md
skills/nebula-mantle-lp/: SKILL.md
skills/nebula-mantle-pools/: SKILL.md
skills/nebula-mantle-swap/: SKILL.md
skills/nebula-treasury-guardrail/: SKILL.md
submission/: CLAIMS.md  DEMO.md  PITCH.md  ppt-prompt.md
test/: smoke-live.ts
test/local/: _tmux.ts  tmux-chat.ts  tmux-cross-session.ts  tmux-inspect.ts  tmux-logs.ts  tmux-model.ts  tmux-status.ts  tmux-sync.ts  tmux-telegram-drive.ts  tmux-topup.ts  tmux-yolo.ts
(+69 files in other folders)
