[package]
name = "nebula-casper-contracts"
version = "0.1.0"
edition = "2021"
description = "Nebula on-chain contracts for Casper (agent-trust registries + AMM), written in Rust with the Odra framework."
license = "MIT"

[dependencies]
odra = { version = "2.8.1", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.1", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.1", default-features = false }

[[bin]]
name = "nebula_casper_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "nebula_casper_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[lib]
doctest = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
